<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/colorPrimary">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/image"
                android:scaleType="fitEnd"
                android:src="@drawable/app_drawer_active"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_xl">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="@dimen/avatar_size_xl"
                        android:layout_height="@dimen/avatar_size_xl"
                        android:contentDescription="@string/avatar"
                        android:src="@drawable/ic_avatar"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_lg"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nick"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_xl"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_lg"
                        android:text="@string/lv_5"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_xl"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_lg"
                        android:text="@string/super_vip"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_xl"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_lg"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/b_coin_label"
                        android:textColor="@color/colorLight"
                        android:textSize="@dimen/font_md"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/empty_decimal"
                        android:textColor="@color/colorLight"
                        android:textSize="@dimen/font_lg"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_lg"
                        android:layout_weight="1"
                        android:text="@string/coin_label"
                        android:textColor="@color/colorLight"
                        android:textSize="@dimen/font_lg"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/empty_decimal"
                        android:textColor="@color/colorLight"
                        android:textSize="@dimen/font_lg"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/click_ripple_default"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="@dimen/padding_lg">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_num"
                    android:textSize="@dimen/font_lg"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/article"
                    android:textSize="@dimen/font_lg"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/click_ripple_default"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="@dimen/padding_lg">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_num"
                    android:textSize="@dimen/font_lg"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/focus"
                    android:textSize="@dimen/font_lg"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/click_ripple_default"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="@dimen/padding_lg">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_num"
                    android:textSize="@dimen/font_lg"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fans"
                    android:textSize="@dimen/font_lg"/>

        </LinearLayout>

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine"/>

</LinearLayout>