<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.LoginFragment">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="@dimen/login_tips_height">
        <ImageView
                android:contentDescription="@string/login_title"
                android:src="@drawable/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>
        <ImageView
                android:id="@+id/ic_22"
                android:src="@drawable/ic_22"
                android:contentDescription="@string/icon_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitStart"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"/>
        <ImageView
                android:id="@+id/ic_33"
                android:src="@drawable/ic_33"
                android:contentDescription="@string/icon_33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitEnd"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_lg"
            android:paddingEnd="@dimen/padding_lg">
        <EditText
                android:id="@+id/input_account"
                android:textCursorDrawable="@null"
                android:layout_margin="@dimen/margin_lg"
                android:drawableStart="@drawable/ic_login_username_default"
                android:drawablePadding="@dimen/padding_md"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPhonetic"
                android:singleLine="true"
                android:hint="@string/input_account_help"
                android:padding="10dp"
                android:maxLength="11"
                android:background="@drawable/bg_line_input"
                android:ems="10"/>
        <EditText
                android:id="@+id/input_password"
                android:textCursorDrawable="@null"
                android:layout_margin="@dimen/margin_lg"
                android:drawableStart="@drawable/ic_login_password_default"
                android:drawablePadding="@dimen/padding_md"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/input_password_help"
                android:padding="10dp"
                android:background="@drawable/bg_line_input"
                android:ems="10"/>
        <LinearLayout
                android:padding="@dimen/padding_md"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:textSize="@dimen/font_xl"
                    android:layout_marginEnd="@dimen/margin_sm"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/bg_outline_click"
                    android:textColor="@drawable/color_outline_click"
                    android:id="@+id/btn_register"
                    android:text="@string/button_register_title"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/login_btn_height"/>
            <Button
                    android:textSize="@dimen/font_xl"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="@dimen/margin_sm"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/bg_solid_click"
                    android:id="@+id/btn_login"
                    android:text="@string/button_login_title"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/login_btn_height"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
