<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_lg">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:minHeight="50dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical|end">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_solid_click"
                    android:paddingStart="@dimen/padding_tiny"
                    android:paddingEnd="@dimen/padding_tiny"
                    android:text="@string/holder_chat_badge"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font_md" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_md"
                    android:text="@string/holder_chat_nick_name"
                    android:textColor="@color/colorSecondary"
                    android:textSize="@dimen/font_lg" />
        </LinearLayout>

        <ImageView
                android:id="@+id/chat_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:adjustViewBounds="true"
                android:background="@drawable/bg_chat_02"
                android:contentDescription="@string/image"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_md"
                android:scaleType="fitXY"
                android:visibility="gone" />

        <TextView
                android:id="@+id/chat_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:background="@drawable/bg_chat_02"
                android:gravity="center_vertical"
                android:minWidth="20dp"
                android:minHeight="50dp"
                android:paddingStart="@dimen/padding_md"
                android:paddingTop="@dimen/padding_sm"
                android:paddingEnd="@dimen/padding_md"
                android:paddingBottom="@dimen/padding_sm"
                android:text="@string/holder_chat_content"
                android:textColor="@color/colorText"
                android:textSize="@dimen/title_sm"
                android:visibility="gone" />

    </LinearLayout>

    <ImageView
            android:id="@+id/chat_avatar"
            android:layout_width="@dimen/avatar_size_md"
            android:layout_height="@dimen/avatar_size_md"
            android:layout_marginStart="@dimen/margin_md"
            android:layout_marginTop="@dimen/margin_md"
            android:background="@drawable/ic_avatar"
            android:contentDescription="@string/avatar" />

</LinearLayout>