<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/click_ripple_default">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_lg">

            <ImageView
                    android:id="@+id/flv_item_thumb"
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    android:background="@color/colorLight"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"/>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_lg"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/flv_item_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_lg"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/video_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/font_xl"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_md"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="@dimen/icon_sm"
                            android:layout_height="@dimen/icon_sm"
                            android:contentDescription="@string/video_up"
                            android:src="@drawable/ic_up_default"/>

                    <TextView
                            android:id="@+id/flv_item_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_md"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/video_up"
                            android:textSize="@dimen/font_md"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="@dimen/icon_sm"
                            android:layout_height="@dimen/icon_sm"
                            android:contentDescription="@string/browse"
                            android:src="@drawable/ic_play_count_default"/>

                    <TextView
                            android:id="@+id/flv_item_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_md"
                            android:layout_weight="1"
                            android:text="@string/browse"
                            android:textSize="@dimen/font_md"/>

                    <ImageView
                            android:layout_width="@dimen/icon_sm"
                            android:layout_height="@dimen/icon_sm"
                            android:contentDescription="@string/comment"
                            android:src="@drawable/ic_comment_default"/>

                    <TextView
                            android:id="@+id/flv_item_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_md"
                            android:layout_weight="1"
                            android:text="@string/comment"
                            android:textSize="@dimen/font_md"/>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_lg"
                android:layout_marginEnd="@dimen/margin_lg"
                android:background="@color/colorLine"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>